bugfix(ui): fix issue on spacing

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -18,8 +18,6 @@
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 html {
